ArticleControllerのshowをOpenAPI Generatorで生成したコードへ移行 (#323)
* refactor: ShowArticleUseCaseの戻り値を著者付きにする

* refactor: ArticleControllerのshowでOpenAPIGeneratorによって生成されたメソッドを利用する

__背景__

- スキーマ駆動したい

__対応__

- OpenAPI Generatorが生成したメソッドを利用する
- テストも適宜合わせる
- 1クラスに入るインナークラスの限界値がきたので、少しだけ合わせて上げる

* clean: 不要になったmyAuthをArticleControllerから削除

* ymllintの指摘修正

* refactor: 不要なArticleを削除

__背景__

- OpenAPI Generatorのおかげでプレゼン層用に用意した自作Articleは不要になった

__対応__

- 不要になったクラスはimportしないようにする

__補足__

- 不要になったArticleは別PRで削除予定
